# IntelliCar

./: .gitignore  README.md  notes.txt  requirements.txt  telemetry_layout.xml  todo.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/centralized_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/centralized_bringup/config/: default.rviz
ros2_ws/src/gamepad_driver/: CMakeLists.txt
ros2_ws/src/intellicar_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/traffic_light_task/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/traffic_light_task/traffic_light_task/: color_segmentator.py  distance_estimator.py  supervisor_emergency_brake.py  supervisor_emergency_brake_progressive_force_approach.py  supervisor_emergency_brake_sergio.py
ros2_ws/src/yolo_detection/: package.xml  setup.py
src/centralized_bringup/: CMakeLists.txt  package.xml
src/centralized_bringup/launch/: main.launch
src/gamepad_control/: CMakeLists.txt  package.xml
src/gamepad_control/launch/: control_mando.launch
src/gamepad_control/src/: joy_to_cmd_vel.cpp
src/object_detection/: package.xml
src/object_detection/scripts/: object_detection_rt.py
src/ros-bridge-0.9.11/: carla-0.9.11-py3.7-linux-x86_64.egg:Zone.Identifier  carla-0.9.11-py3.7-win-amd64.egg:Zone.Identifier
src/ros-bridge-0.9.11/carla_ros_bridge/: CMakeLists.txt
src/yolo_detection/: CMakeLists.txt  package.xml
src/yolo_detection/scripts/: prediction_alvaro.py  prediction_original.py  prediction_sergio.py  prediction_yolov7.py  prediction_yolov8.py
(+85 files in other folders)
