<?xml version="1.0"?>
<package format="2">
  <name>gamepad_control</name>
  <version>1.0.0</version>
  <description>Package to control car using a gamepad input</description>

  <maintainer email="sl.doncel@pm.me">SeLe</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
